--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
   <section class="card" id="intro">
     <h2>Come funziona</h2>
-    <p class="small">72 domande suddivise in 9 aree. Rispondi con valori da 1 (completamente in disaccordo) a 5 (completamente d'accordo). Le domande che esprimono un orientamento "di sinistra" vengono automaticamente invertite (6 - valore) perché il risultato finale mostri sempre: <strong>1 = molto a sinistra</strong>, <strong>5 = molto a destra</strong>.</p>
-    <p class="small">Alla fine otterrai un punteggio ponderato, un profilo descrittivo e la corrispondenza con partiti e movimenti, italiani e di riferimento straniero.</p>
+    <p class="small">72 domande suddivise in 9 aree. Rispondi con valori da 1 (completamente in disaccordo) a 5 (completamente d'accordo).</p>
+    <p class="small">Alla fine otterrai un punteggio ponderato, un profilo descrittivo e la corrispondenza con partiti e movimenti italiani ed esteri.</p>
   </section>
 
   <form id="testForm">
