--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section class="card" id="intro">
     <h2>Come funziona</h2>
-    <p class="small">Rispondi alle 72 affermazioni, 8 per ciascuna delle 9 aree tematiche. Usa le opzioni <strong>“Seleziona” → 1 → 2 → 3 → 4 → 5</strong> (1 = completamente in disaccordo, 5 = completamente d'accordo). Alcune domande sono formulate in modo che un "5" indichi una posizione tipica della sinistra: queste verranno automaticamente <em>invertite</em> internamente (6 - valore) per uniformare la scala in cui, alla fine, 1 indica orientamento più verso la sinistra e 5 verso la destra.</p>
+    <p class="small">Rispondi alle 72 affermazioni, 8 per ciascuna delle 9 aree tematiche. Usa le opzioni <strong>“Seleziona” e assegna un valore numerico da 1 → 2 → 3 → 4 → 5</strong> (1 = completamente in disaccordo, 5 = completamente d'accordo).</p>
     <p class="small">Il pulsante <strong>Calcola il profilo</strong> sarà abilitato solo quando tutte le 72 domande saranno completate. Il pulsante <strong>Reset</strong> riporterà tutte le domande a <em>Seleziona</em>.</p>
   </section>
 
