--- a/metodi.html
+++ b/metodi.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', Roboto, sans-serif;
       background-color: #f8f9fb;
-      color: #111111;
+      color: #FFFFFF;
       margin: 0;
       padding: 0;
       line-height: 1.6;
