--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <button id="save" class="alt">Salva locale</button>
       <button id="load" class="alt">Carica salvataggio</button>
       <button id="reset" class="alt">Reset</button>
-      <a href="profili.html" style="margin-left:auto;align-self:center;text-decoration:none;color:var(--accent);display:none">📘 Profili di riferimento</a>
-      <a href="metodi.html" style="margin-left:12px;align-self:center;text-decoration:none;color:var(--accent)">📄 Metodi</a>
+     <!-- <a href="profili.html" style="margin-left:auto;align-self:center;text-decoration:none;color:var(--accent);display:none">📘 Profili di riferimento</a>
+      <a href="metodi.html" style="margin-left:12px;align-self:center;text-decoration:none;color:var(--accent)">📄 Metodi</a> -->
     </div>
 
     <div id="result" aria-live="polite"></div>
