--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
     <div class="intro">
       <strong>Introduzione</strong>
       <p style="margin:.4rem 0 0">
-        Questo test è stato progettato per aiutarti a comprendere il tuo orientamento politico complessivo
-        in modo scientifico e imparziale. Non è un sondaggio elettorale: misura valori e priorità su 9 aree tematiche.
-        Rispondi sinceramente; il risultato fornirà il profilo corrispondente e il profilo più affine (solo descrizioni, senza numeri).
+        Questo test è stato progettato per aiutarti a comprendere il tuo orientamento politico complessivo in modo scientifico e imparziale.
+        Non si tratta di un sondaggio elettorale, ma di un profilo valoriale che analizza come le tue opinioni si distribuiscono lungo alcuni assi fondamentali            del pensiero politico contemporaneo.
       </p>
       <p style="margin:.4rem 0 0;font-size:.9rem;color:var(--muted)">Durata stimata: 6–12 minuti — 81 affermazioni (9 aree × 9 affermazioni).</p>
     </div>
