--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
       <p style="margin:.4rem 0 0">
         Questo test è stato progettato per aiutarti a comprendere il tuo orientamento politico complessivo in modo scientifico e imparziale.
         Non si tratta di un sondaggio elettorale, ma di un profilo valoriale che analizza come le tue opinioni si distribuiscono lungo alcuni assi fondamentali            del pensiero politico contemporaneo.
+        🔹 Metodi di riferimento
+
+        Il modello utilizza un approccio misto ispirato a diverse teorie di scienza politica e psicometria:
+
+        1. Modello bidimensionale dell’orientamento politico
+          (fonte: Political Compass, Pew Research Center, Inglehart-Welzel Cultural Map).
+          → Valuta le opinioni su due assi principali:
+
+          Economico: da interventista (sinistra) a liberista (destra)
+          Sociale: da progressista (liberale) a conservatore (autoritarista)
+
+        2. Analisi assiologiche e culturali
+          Derivate dal World Values Survey e dai modelli di Ronald Inglehart, che distinguono tra valori tradizionali e post-materialisti, religiosi e laici,                collettivisti e individualisti.
+
+        3. Modello italiano integrato (2025)
+          Le risposte vengono adattate al contesto politico italiano attuale, confrontandole con i valori medi dei principali partiti e movimenti, per offrire una           mappatura personalizzata rispetto ai programmi politici recenti (2022–2025).
+
+        4. Normalizzazione statistica
+          Le domande sono calibrate in modo che ciascuna area (Economia, Diritti, Sicurezza, Cultura, Lavoro, ecc.) contribuisca al punteggio complessivo in                 misura equilibrata.
+          L’algoritmo di valutazione utilizza un sistema a punteggio ponderato e simmetrico, così da evitare bias di formulazione.
       </p>
       <p style="margin:.4rem 0 0;font-size:.9rem;color:var(--muted)">Durata stimata: 6–12 minuti — 81 affermazioni (9 aree × 9 affermazioni).</p>
     </div>
